--- a/libft/Makefile
+++ b/libft/Makefile
@@ -18,7 +18,7 @@ SRC_FLS = 	$(LIBFT_FLS)\
 			$(FT_PRINTF_FLS)\
 			$(GNL_FLS)
 
-LIBFT_FLS = $(LIBFT_DIR)/ft_atoi_long.c $(LIBFT_DIR)/ft_isalpha.c $(LIBFT_DIR)/ft_memchr.c\
+LIBFT_FLS = $(LIBFT_DIR)/ft_atoi.c $(LIBFT_DIR)/ft_atol.c $(LIBFT_DIR)/ft_isalpha.c $(LIBFT_DIR)/ft_memchr.c\
 			$(LIBFT_DIR)/ft_memset.c $(LIBFT_DIR)/ft_strlcpy.c $(LIBFT_DIR)/ft_strrchr.c\
 			$(LIBFT_DIR)/ft_bzero.c $(LIBFT_DIR)/ft_isascii.c $(LIBFT_DIR)/ft_memcmp.c\
 			$(LIBFT_DIR)/ft_strchr.c $(LIBFT_DIR)/ft_strlen.c $(LIBFT_DIR)/ft_tolower.c\
@@ -32,7 +32,7 @@ LIBFT_FLS = $(LIBFT_DIR)/ft_atoi_long.c $(LIBFT_DIR)/ft_isalpha.c $(LIBFT_DIR)/f
 			$(LIBFT_DIR)/ft_split.c $(LIBFT_DIR)/ft_lstnew.c $(LIBFT_DIR)/ft_lstadd_front.c\
 			$(LIBFT_DIR)/ft_lstsize.c $(LIBFT_DIR)/ft_lstlast.c $(LIBFT_DIR)/ft_lstadd_back.c\
 			$(LIBFT_DIR)/ft_lstdelone.c $(LIBFT_DIR)/ft_lstclear.c $(LIBFT_DIR)/ft_lstiter.c\
-			$(LIBFT_DIR)/ft_lstmap.c\
+			$(LIBFT_DIR)/ft_lstmap.c
 
 FT_PRINTF_FLS = $(FT_PRINTF_DIR)/ft_printf.c $(FT_PRINTF_DIR)/str_handler.c\
 				$(FT_PRINTF_DIR)/ft_putnbr_count.c $(FT_PRINTF_DIR)/ft_putstr_count.c\
